# japanese-grammar-resume

./: .gitignore  CLAUDE.md  README.md  TODO.md  create_summary.py  generate-pdf.sh  pyproject.toml
japanese_grammar_resume/: __main__.py  styles.py  vocab_registry.json
japanese_grammar_resume/chapters/: ch03_02_state_of_being.py  ch03_03_particles.py  ch03_04_adjectives.py  ch03_05_verb_basics.py  ch03_06_negative_verbs.py  ch03_07_past_tense.py  ch03_08_verb_particles.py  ch03_09_transitive.py  ch03_10_relative_clauses.py  ch03_11_noun_particles.py  ch03_12_adverbs.py
japanese_grammar_resume/chapters/ch01/: ch01_00_introduction.py  ch01_01_introduction.py  ch01_01_problem.py  ch01_02_japanese_guide.py  ch01_03_suggestions.py
japanese_grammar_resume/chapters/ch02/: ch02_00_writing_system.py  ch02_01_scripts.py  ch02_01_writing_system.py  ch02_02_intonation.py  ch02_03_hiragana.py  ch02_04_katakana.py  ch02_05_kanji.py
japanese_grammar_resume/chapters/ch03/: ch03_00_basic_grammar.py  ch03_01_basic_grammatical_structures.py  ch03_02_state_of_being.py  ch03_03_particles.py  ch03_04_adjectives.py  ch03_05_verb_basics.py  ch03_06_negative_verbs.py  ch03_07_past_tense.py  ch03_08_verb_particles.py  ch03_09_transitive.py  ch03_10_relative_clauses.py  ch03_11_noun_particles.py  ch03_12_adverbs.py
japanese_grammar_resume/chapters/ch04/: ch04_00_essential_grammar.py  ch04_01_polite_form.py  ch04_02_addressing_people.py  ch04_03_question_marker.py  ch04_04_compound_sentences.py  ch04_05_other_te_form.py  ch04_06_potential_form.py  (+12 more)
scripts/: sync_vocab_registry.py
