[project]
name = "japanese-grammar-resume"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["reportlab>=4.0"]

[project.optional-dependencies]
dev = ["ruff>=0.15"]

[project.scripts]
japanese-grammar-resume = "japanese_grammar_resume.__main__:main"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "F401",   # unused imports in styles.py are re-exported via *
    "F403",   # star imports are intentional (styles → chapters)
    "F405",   # names from star imports are defined
    "E501",   # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
